--- a/.env.example
+++ b/.env.example
@@ -78,7 +78,7 @@ VITE_NOTIFICATIONS_API_URL=https://brooksweb.uk/api/notifications
 VITE_MAP_PROVIDER=leaflet
 
 # Google Maps API Key (only needed if using Google Maps)
-VITE_GOOGLE_MAPS_KEY=
+VITE_GOOGLE_MAPS_KEY=AIzaSyACmePNriS7NruA_PHvgMexlggcbeji6p0
 
 # Default map center
 VITE_DEFAULT_CENTER_LAT=41.9028
