--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,12 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
-  REGION: ${{ vars.GCP_REGION }}
-  REPOSITORY: ${{ vars.GCP_ARTIFACT_REPOSITORY }}
-  VM_ZONE: ${{ vars.GCP_VM_ZONE }}
-  VM_NAME: ${{ vars.GCP_VM_NAME }}
-  ENV_SECRET_NAME: ${{ vars.GCP_ENV_SECRET_NAME }}
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  REGION: ${{ secrets.GCP_REGION }}
+  REPOSITORY: ${{ secrets.GCP_ARTIFACT_REPOSITORY }}
+  VM_ZONE: ${{ secrets.GCP_VM_ZONE }}
+  VM_NAME: ${{ secrets.GCP_VM_NAME }}
+  ENV_SECRET_NAME: ${{ secrets.GCP_ENV_SECRET_NAME }}
 
 jobs:
   validate-env:
@@ -45,15 +45,24 @@ jobs:
           echo "❌ PROJECT_ID is empty. Set repo variable GCP_PROJECT_ID."
           exit 1
         fi
+        REGION="${{ env.REGION }}"
+        if [ -z "$REGION" ]; then
+          echo "❌ REGION is empty. Set repo variable GCP_REGION."
+          exit 1
+        fi
+        REPOSITORY="${{ env.REPOSITORY }}"
+        if [ -z "$REPOSITORY" ]; then
+          echo "❌ REPOSITORY is empty. Set repo variable GCP_ARTIFACT_REPOSITORY."
+          exit 1
+        fi
         ENV_SECRET_NAME="${{ env.ENV_SECRET_NAME }}"
         if [ -z "$ENV_SECRET_NAME" ]; then
-          ENV_SECRET_NAME="${{ secrets.ENV_SECRET_NAME }}"
-        fi
-        if [ -z "$ENV_SECRET_NAME" ]; then
-          echo "❌ ENV_SECRET_NAME is empty. Set repo variable GCP_ENV_SECRET_NAME or secret ENV_SECRET_NAME."
+          echo "❌ ENV_SECRET_NAME is empty. Set secret GCP_ENV_SECRET_NAME."
           exit 1
         fi
         echo "PROJECT_ID=$PROJECT_ID" >> $GITHUB_ENV
+        echo "REGION=$REGION" >> $GITHUB_ENV
+        echo "REPOSITORY=$REPOSITORY" >> $GITHUB_ENV
         echo "ENV_SECRET_NAME=$ENV_SECRET_NAME" >> $GITHUB_ENV
 
     - name: 📦 Fetch Environment Variables from Secret Manager
@@ -174,15 +183,24 @@ jobs:
           echo "❌ PROJECT_ID is empty. Set repo variable GCP_PROJECT_ID."
           exit 1
         fi
+        REGION="${{ env.REGION }}"
+        if [ -z "$REGION" ]; then
+          echo "❌ REGION is empty. Set repo variable GCP_REGION."
+          exit 1
+        fi
+        REPOSITORY="${{ env.REPOSITORY }}"
+        if [ -z "$REPOSITORY" ]; then
+          echo "❌ REPOSITORY is empty. Set repo variable GCP_ARTIFACT_REPOSITORY."
+          exit 1
+        fi
         ENV_SECRET_NAME="${{ env.ENV_SECRET_NAME }}"
         if [ -z "$ENV_SECRET_NAME" ]; then
-          ENV_SECRET_NAME="${{ secrets.ENV_SECRET_NAME }}"
-        fi
-        if [ -z "$ENV_SECRET_NAME" ]; then
-          echo "❌ ENV_SECRET_NAME is empty. Set repo variable GCP_ENV_SECRET_NAME or secret ENV_SECRET_NAME."
+          echo "❌ ENV_SECRET_NAME is empty. Set secret GCP_ENV_SECRET_NAME."
           exit 1
         fi
         echo "PROJECT_ID=$PROJECT_ID" >> $GITHUB_ENV
+        echo "REGION=$REGION" >> $GITHUB_ENV
+        echo "REPOSITORY=$REPOSITORY" >> $GITHUB_ENV
         echo "ENV_SECRET_NAME=$ENV_SECRET_NAME" >> $GITHUB_ENV
 
     - name: 🔍 Verify GCP Configuration
@@ -630,6 +648,11 @@ jobs:
           echo "❌ Deployment failed, initiating rollback..."
 
           cd /opt/brooks
+
+          if [ -z "${{ env.REGION }}" ] || [ -z "${{ env.PROJECT_ID }}" ] || [ -z "${{ env.REPOSITORY }}" ]; then
+            echo "❌ REGION/PROJECT_ID/REPOSITORY missing. Set GCP_REGION, GCP_PROJECT_ID, GCP_ARTIFACT_REPOSITORY."
+            exit 1
+          fi
 
           echo "📝 Preparing rollback env file..."
           cp /opt/brooks/.env /opt/brooks/.env.runtime
