--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,37 +9,6 @@ services:
     volumes:
       - brooks-redis-data:/data
 
-  postgres:
-    image: postgis/postgis:16-3.4
-    container_name: brooks-postgres
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER?POSTGRES_USER must be set in .env file}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD?POSTGRES_PASSWORD must be set in .env file}
-      AUTH_DB_USER: ${AUTH_DB_USER?AUTH_DB_USER must be set in .env file}
-      AUTH_DB_PASSWORD: ${AUTH_DB_PASSWORD?AUTH_DB_PASSWORD must be set in .env file}
-      AUTH_DB_NAME: ${AUTH_DB_NAME?AUTH_DB_NAME must be set in .env file}
-      SOCIAL_DB_USER: ${SOCIAL_DB_USER?SOCIAL_DB_USER must be set in .env file}
-      SOCIAL_DB_PASSWORD: ${SOCIAL_DB_PASSWORD?SOCIAL_DB_PASSWORD must be set in .env file}
-      SOCIAL_DB_NAME: ${SOCIAL_DB_NAME?SOCIAL_DB_NAME must be set in .env file}
-      LISTS_DB_USER: ${LISTS_DB_USER?LISTS_DB_USER must be set in .env file}
-      LISTS_DB_PASSWORD: ${LISTS_DB_PASSWORD?LISTS_DB_PASSWORD must be set in .env file}
-      LISTS_DB_NAME: ${LISTS_DB_NAME?LISTS_DB_NAME must be set in .env file}
-      PINS_DB_USER: ${PINS_DB_USER?PINS_DB_USER must be set in .env file}
-      PINS_DB_PASSWORD: ${PINS_DB_PASSWORD?PINS_DB_PASSWORD must be set in .env file}
-      PINS_DB_NAME: ${PINS_DB_NAME?PINS_DB_NAME must be set in .env file}
-      MODERATION_DB_USER: ${MODERATION_DB_USER?MODERATION_DB_USER must be set in .env file}
-      MODERATION_DB_PASSWORD: ${MODERATION_DB_PASSWORD?MODERATION_DB_PASSWORD must be set in .env file}
-      MODERATION_DB_NAME: ${MODERATION_DB_NAME?MODERATION_DB_NAME must be set in .env file}
-    volumes:
-      - ./db/init:/docker-entrypoint-initdb.d
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
-
   auth-service:
     build:
       context: ..
@@ -61,10 +30,11 @@ services:
       INTERNAL_SERVICE_ALLOWED_NAMES: ${INTERNAL_SERVICE_ALLOWED_NAMES?INTERNAL_SERVICE_ALLOWED_NAMES must be set in .env file}
       INTERNAL_SERVICE_KEY_MAP: ${INTERNAL_SERVICE_KEY_MAP?INTERNAL_SERVICE_KEY_MAP must be set in .env file}
     depends_on:
-      - postgres
       - redis
     ports:
       - "8081:8081"
+    volumes:
+      - ../prod-ca-2021.crt:/etc/ssl/certs/supabase-ca.crt:ro
 
   social-service:
     build:
@@ -83,10 +53,11 @@ services:
       INTERNAL_SERVICE_ALLOWED_NAMES: ${INTERNAL_SERVICE_ALLOWED_NAMES?INTERNAL_SERVICE_ALLOWED_NAMES must be set in .env file}
       INTERNAL_SERVICE_KEY_MAP: ${INTERNAL_SERVICE_KEY_MAP?INTERNAL_SERVICE_KEY_MAP must be set in .env file}
     depends_on:
-      - postgres
       - redis
     ports:
       - "8082:8082"
+    volumes:
+      - ../prod-ca-2021.crt:/etc/ssl/certs/supabase-ca.crt:ro
 
   lists-service:
     build:
@@ -105,10 +76,11 @@ services:
       INTERNAL_SERVICE_ALLOWED_NAMES: ${INTERNAL_SERVICE_ALLOWED_NAMES?INTERNAL_SERVICE_ALLOWED_NAMES must be set in .env file}
       INTERNAL_SERVICE_KEY_MAP: ${INTERNAL_SERVICE_KEY_MAP?INTERNAL_SERVICE_KEY_MAP must be set in .env file}
     depends_on:
-      - postgres
       - redis
     ports:
       - "8083:8083"
+    volumes:
+      - ../prod-ca-2021.crt:/etc/ssl/certs/supabase-ca.crt:ro
 
   pins-service:
     build:
@@ -137,12 +109,13 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD?REDIS_PASSWORD must be set in .env file}
       REDIS_CACHE_TTL_SECONDS: ${REDIS_CACHE_TTL_SECONDS?REDIS_CACHE_TTL_SECONDS must be set in .env file}
     depends_on:
-      - postgres
       - social-service
       - lists-service
       - redis
     ports:
       - "8084:8084"
+    volumes:
+      - ../prod-ca-2021.crt:/etc/ssl/certs/supabase-ca.crt:ro
 
   media-service:
     build:
@@ -172,10 +145,11 @@ services:
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS?BROOKS_WEB_ORIGINS must be set in .env file}
     depends_on:
-      - postgres
       - redis
     ports:
       - "8086:8086"
+    volumes:
+      - ../prod-ca-2021.crt:/etc/ssl/certs/supabase-ca.crt:ro
 
   notifications-service:
     build:
