fix: Revert web network to driver bridge instead of external
- External network caused 'network web declared as external, but could not be found' error
- Using driver: bridge allows docker-compose to create network automatically
- Fixes deployment and rollback failures

--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -210,7 +210,7 @@ networks:
   brooks-network:
     driver: bridge
   web:
-    external: true
+    driver: bridge
 
 volumes:
   brooks-redis-data:
